<resources>
    <string name="app_name">My Modules</string>
    <string name="c203">C203 Web App In Development in PHP</string>
    <string name="c228">C228 Operating Systems Security</string>
    <string name="c328">C328 Intelligent Networks</string>
    <string name="c331">C331 Digital Security and Forensics</string>
    <string name="c346">C346 Mobile App Development</string>
    <string name="back">Back</string>
</resources>